grammar-draft
Gramática


ARTICLE: HEADER BODY REFERENCES

HEADER: CODE PUBLICATION TITLE AUTHOR ABSTRACT KEYWORDS
      | PUBLICATION CODE TITLE AUTHOR ABSTRACT KEYWORDS


CODE: <number>

PUBLICATION: "IEEE" <text> "," MONTH YEAR

MONTH: "JANUARY" | "FEBRUARY" | "MARCH" | "APRIL" | "MAY" | "JUNE"
     | "JULY" | "AUGUST" | "SEPTEMBER" | "OCTOBER" | "NOVEMBER" | "DECEMBER"

YEAR: <number>

TITLE: <text>

AUTHOR: <text>

ABSTRACT: "Abstract—" <text> "Index"

KEYWORDS: "Index" <text> "I. INTRODUCTION"

//TODO: refinar com seções
BODY: "I. INTRODUCTION" <text> "REFERENCES"

REFERENCES: "REFERENCES" <text>
